removed obj folder

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ src/FileIntegrityMonitor/FileIntegrityMonitor/bin
 src/FileIntegrityMonitor/FileIntegrityMonitor/obj
 src/FileIntegrityMonitor/FileIntegrityMoniror.Console/bin
 src/FileIntegrityMonitor/FileIntegrityMoniror.Console/obj
+src/FileIntegrityMonitor/FileIntegrityMonitor.Console/bin
+src/FileIntegrityMonitor/FileIntegrityMonitor.Console/obj
