ui new scan works, console app almost done

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.mdf
 
 #debug, build
+src/FileIntegrityMonitor/.vs
 src/FileIntegrityMonitor/FileIntegrityMonitor/bin
 src/FileIntegrityMonitor/FileIntegrityMonitor/obj
 src/FileIntegrityMonitor/FileIntegrityMoniror.Console/bin
